Progress on #41 - view event logs from document database
