# src/services/event/event.controller.ts
@@ -1,6 +1,7 @@
 import { NextFunction, Request, Response, Router } from "express";
 import Controller from "../../interfaces/controller.interface";
 import RequestWithUser from "../../interfaces/request.interface";
+import URLParams from "../../interfaces/urlparams.interface";
 import authenticationMiddleware from "../../middleware/authentication.middleware";
 import validationMiddleware from "../../middleware/validation.middleware";
 import { Formatter } from "../../utils/formatter";
@@ -26,10 +27,30 @@ class EventController implements Controller {
   }
 
   private all = async (request: RequestWithUser, response: Response, next: NextFunction) => {
-    // TODO: handle query params and pagination
+    const {q, limit, offset, from, to, sort} = request.query;
+    const params: URLParams = {};
+
+    if (q) {
+      params.q = q;
+    }
+    if (limit) {
+      params.limit = limit;
+    }
+    if (offset) {
+      params.offset = offset;
+    }
+    if (from) {
+      params.from = from;
+    }
+    if (to) {
+      params.to = to;
+    }
+    if (sort) {
+      params.sort = sort;
+    }
 
     try {
-      const data: any = await this.eventDao.getAll(request.user);
+      const data: any = await this.eventDao.getAll(request.user, params);
       response.send(this.fmt.formatResponse(data, 0, "OK"));
     } catch (error) {
       next(error);
